--- a/Assets/tailwind/input.css
+++ b/Assets/tailwind/input.css
@@ -3,7 +3,7 @@
 
 
 .btn {
-    @apply px-6 py-2 bg-white rounded-xl transition text-gray-600 font-semibold disabled:opacity-40 disabled:cursor-not-allowed;
+    @apply px-5 py-2 bg-white rounded-lg transition text-gray-600 font-semibold disabled:opacity-40 disabled:cursor-not-allowed;
 }
 
 .btn.btn-primary {
