--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -4,31 +4,40 @@
 @inject Mixer Mixer
 @inject MixerModel Model
 
-<div class="h-screen flex flex-col">
+<div class="h-screen flex flex-col bg-white dark:bg-gray-800 text-gray-900 dark:text-gray-300">
 
-    
     @if (Mixer.State.IsConnected && !Model.IsInitialized)
     {
-        <div class="p-4 shadow-sm border-b border-gray-300 bg-primary h-screen w-screen text-white flex flex-col items-center justify-center">
-    
-            <p class="text-sm">
+        <div class="
+            p-4 shadow-sm border-b h-screen w-screen flex flex-col items-center justify-center
+            bg-primary text-white
+            border-gray-300
+            dark:bg-gray-800 dark:text-gray-200 dark:border-gray-700
+        ">
+            <p class="text-sm opacity-90">
                 Loading mixer settings…
             </p>
-            
+
             <div class="text-center mt-16">
                 <LoadingSpinner />
             </div>
-            <p class="text-sm mt-2">
+
+            <p class="text-sm mt-2 opacity-90">
                 @($"{Model.InitCompleted.Count}/{Model.InitExpected.Count}")
             </p>
-            <div class="w-full bg-white/40 h-3 rounded-xl mt-2">
-                <div class="bg-white h-3 rounded-xl transition-all duration-200"
-                     style="width:@($"{Model.InitProgress*100:F0}%")">
+
+            <div class="w-full bg-white/40 dark:bg-gray-700/60 h-3 rounded-xl mt-2">
+                <div class="
+                    h-3 rounded-xl transition-all duration-200
+                    bg-white
+                    dark:bg-gray-200
+                "
+                style="width:@($"{Model.InitProgress*100:F0}%")">
                 </div>
             </div>
         </div>
     }
-    
+
     @if (!Mixer.State.IsConnected || Model.IsInitialized)
     {
         <div class="flex-1 overflow-auto">
@@ -36,37 +45,38 @@
         </div>
     }
 
-    @if (Mixer.State.IsConnected)
+    @if (Mixer.State.IsConnected && Model.IsInitialized)
     {
-        <nav class="bg-white border-t border-gray-200 shadow-lg flex justify-around items-center text-gray-500">
-
+        <nav class="flex justify-around items-center
+            bg-white text-gray-500 border-t dark:border-t-gray-700
+            dark:bg-gray-900 dark:text-gray-300
+        ">
             <NavLink href="@Routes.InOut"
-                     class="flex flex-col items-center gap-1 px-4 py-2"
-                     ActiveClass="text-primary"
-                     Match="NavLinkMatch.All">
-                <i class="fas fa-plug text-xl"></i>
+                class="flex flex-col items-center gap-1 px-4 py-2"
+                ActiveClass="text-primary"
+                Match="NavLinkMatch.All">
+                <i class="fad fa-plug text-xl"></i>
                 <span class="text-xs">In/Out</span>
             </NavLink>
 
             <NavLink href="@Routes.Mix"
-                     ActiveClass="text-primary"
-                     class="flex flex-col items-center gap-1 px-4 py-2">
-                <i class="fas fa-square-sliders-vertical text-xl"></i>
+                class="flex flex-col items-center gap-1 px-4 py-2"
+                ActiveClass="text-primary">
+                <i class="fad fa-square-sliders-vertical text-xl"></i>
                 <span class="text-xs">Mix</span>
             </NavLink>
 
             <NavLink href="@Routes.OscMonitor"
-                     ActiveClass="text-primary"
-                     class="flex flex-col items-center gap-1 px-4 py-2">
-                <i class="fas fa-terminal text-xl"></i>
+                class="flex flex-col items-center gap-1 px-4 py-2"
+                ActiveClass="text-primary">
+                <i class="fad fa-terminal text-xl"></i>
                 <span class="text-xs">OSC</span>
             </NavLink>
-
         </nav>
     }
 </div>
 
-@code{
+@code {
 
     protected override void OnInitialized()
     {
