--- a/Components/MixerCard.razor
+++ b/Components/MixerCard.razor
@@ -1,15 +1,15 @@
 ﻿@using Eggbox.Models
 @using Eggbox.Services
 
-<div class="relative p-3 rounded-2xl overflow-hidden bg-white/30 backdrop-blur-sm border border-gray-100/60transition-transform duration-200 ease-in-out @(isAnimating ? "scale-95 opacity-70" : "scale-100 opacity-100")"
+<div class="relative p-3 rounded-2xl overflow-hidden bg-primary/10 backdrop-blur-sm border border-primary transition-transform duration-200 ease-in-out @(isAnimating ? "scale-95 opacity-70" : "scale-100 opacity-100")"
      @onclick="SelectAsync">
 
     <div class="transition-opacity duration-300 flex gap-10 items-center w-full">
         <div class="grow">
-            <div class="font-medium text-white">@MixerInfo.IpAddress</div>
-            <div class="text-sm text-gray-200 uppercase">@MixerInfo.MixerType</div>
+            <div class="font-medium text-gray-100">@MixerInfo.IpAddress</div>
+            <div class="text-xs text-gray-300 uppercase">@MixerInfo.MixerType</div>
         </div>
-        <div class="items-center flex gap-1">
+        <div class="items-center flex gap-1 text-primary">
             <i class="text-2xl fas fa-circle-play"></i>
             <span class="font-medium text-sm">Connect</span>
         </div>
